objects/Grid_ContractHistory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts History</relationshipLabel>
        <relationshipName>Grid_ContractsHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRID_AreaVenditaSAP__c</fullName>
        <label>Area Vendita SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_CodiceClienteSAP__c</fullName>
        <label>Codice Cliente SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_ContrattoClienteSAP__c</fullName>
        <label>Contratto Cliente SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_ProfitCenterSAP__c</fullName>
        <label>Profit Center SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_TipoOdVSAP__c</fullName>
        <label>Tipo OdV SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_2016__c</fullName>
        <label>2016</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_2017__c</fullName>
        <label>2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_2018__c</fullName>
        <label>2018</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Area__c</fullName>
        <formula>TEXT(Account__r.Grid_MacroGeography__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_BillingAddress__c</fullName>
        <formula>Account__r.BillingStreet &amp;&quot; &quot;&amp; Account__r.BillingCity &amp;&quot; &quot;&amp;   Account__r.BillingPostalCode &amp;&quot;,&quot;&amp; Account__r.BillingState &amp;&quot;,&quot;&amp; Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_ContractDescription__c</fullName>
        <label>Contract Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grid_ContractDuration__c</fullName>
        <formula>Grid_ContractEndDate__c - Grid_ContractStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_ContractName__c</fullName>
        <externalId>true</externalId>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_ContractSigningDate__c</fullName>
        <label>Contract Signing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_ContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grid_Country__c</fullName>
        <formula>TEXT(Account__r.Grid_Geography__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_EnelRelationship__c</fullName>
        <formula>TEXT(Account__r.Grid_EnelRelationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enel Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grid_HoldingName__c</fullName>
        <formula>Account__r.Grid_HoldingName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grid_SalesRep__c</fullName>
        <formula>Account__r.Owner.FirstName  &amp; &quot; &quot; &amp;  Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_TypeOfContract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volturato</fullName>
                </value>
                <value>
                    <fullName>Gridspertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_TypeOfOpportunity__c</fullName>
        <label>Type of Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tender</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>Framework Agreement</fullName>
                </value>
                <value>
                    <fullName>Co-Creation</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_TypeOfRollout__c</fullName>
        <label>Type of Rollout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Massiva</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grid_WBSSAP__c</fullName>
        <label>WBS SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Grid_ContractName__c</columns>
        <columns>Grid_ContractStartDate__c</columns>
        <columns>Grid_ContractEndDate__c</columns>
        <columns>Grid_TotalAmount__c</columns>
        <columns>Grid_SalesRep__c</columns>
        <columns>Grid_ContractDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Grid_ContractName__c</columns>
        <columns>Account__c</columns>
        <columns>Grid_ContractStartDate__c</columns>
        <columns>Grid_ContractEndDate__c</columns>
        <columns>Grid_TotalAmount__c</columns>
        <columns>Grid_SalesRep__c</columns>
        <columns>Grid_ContractDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Contracts</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>